# leetcode-judge-backend

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
docker/: run-celery-beat  run-celery-worker  run-server
src/app/bulletins/: admin.py  apps.py  models.py
src/app/bulletins/api/: urls.py
src/app/bulletins/api/serializers/: __init__.py  (+1 more)
src/app/bulletins/migrations/: 0001_initial.py
src/app/courses/: admin.py  apps.py  models.py  utils.py
src/app/courses/api/: urls.py
src/app/courses/migrations/: 0001_initial.py
src/app/problems/: admin.py  apps.py  models.py
src/app/problems/api/: urls.py
src/app/problems/migrations/: 0001_initial.py
src/app/submissions/: admin.py  apps.py  models.py
src/app/submissions/api/: urls.py
src/app/submissions/migrations/: 0001_initial.py  0002_verifysubmission.py
src/app/submissions/tests/: prepare.py  test_submission.py
src/app/users/: admin.py  apps.py  models.py
src/app/users/api/: urls.py
src/app/users/migrations/: 0001_initial.py
src/core/: docs.py  urls.py
src/core/settings/: .env.example  __init__.py  common.py
src/core/settings/components/: ckeditor.py  docs.py  jwt.py  restful.py  sentry.py  social_auth.py  storage.py
src/graphql/query/: Question.graphql  QuestionList.graphql
src/static/highlight/: highlight.min.js
src/static/submissions/: verification.css  verification.js
src/utils/django/: admin.py  ckeditor.py  managers.py  models.py
src/utils/rest_framework/: __init__.py  filters.py  pagination.py  serializers.py  viewsets.py
(+32 files in other folders)
