[tool.poetry]
name = "leetcode-judge-backend"
version = "0.1.0"
description = ""
authors = ["jasonxie <x5758x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
django-filter = "^22.1"
drf-yasg = "^1.21.3"
django-cors-headers = "^3.13.0"
django-extensions = "^3.2.0"
django-environ = "^0.9.0"
whitenoise = "^6.2.0"
django-split-settings = "^1.1.0"
djangorestframework-simplejwt = "^5.2.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
social-auth-app-django = "^5.0.0"
pyhumps = "^3.7.2"
gql = {extras = ["requests"], version = "^3.4.0"}
django-stubs = "^1.12.0"
django-object-actions = "^4.0.0"
Pillow = "^9.2.0"
django-storages = {extras = ["boto3"], version = "^1.13.1"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipython = "^8.4.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.1"
pydocstyle = "^6.1.1"
Werkzeug = "^2.2.1"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.7.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
extend-exclude = '''
/(
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
  "ignore::django.utils.deprecation.RemovedInDjango40Warning",
  "ignore::django.utils.deprecation.RemovedInDjango41Warning",
]

